研发环境/自动化测试/metersphere/参考文档/manifest/metersphere/templates/04-ingress.yaml
---
# 外部域名
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metershpere
  namespace: devops-test-ms
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: ms-test-devops.local.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: metersphere-server
                port:
                  number: 8081
